force-app/main/default/objects/ContactTimeEntry__c/ContactTimeEntry__c.object-meta.xml
<CustomObject>
    <description>Junction object linking Contacts and Time Entries.</description>
    <label>Contact Time Entry</label>
    <nameField>
        <label>Contact Time Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>