force-app/main/default/objects/ContactTimeEntry__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Time Entries</relationshipLabel>
    <relationshipName>Contact_Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>