force-app/main/default/objects/ContactTimeEntry__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Time Entries</relationshipLabel>
    <relationshipName>Contact_Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>