force-app/main/default/objects/ContactTimeEntry__c/fields/Time_Entry__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Entry</label>
    <referenceTo>Time_Entry__c</referenceTo>
    <relationshipLabel>Contact Time Entries</relationshipLabel>
    <relationshipName>Contact_Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>